--- a/public/html/settings.html
+++ b/public/html/settings.html
@@ -36,7 +36,7 @@
                             </div>
                             <div class="about">
                                 <h5 id="publicAbout" class="mb-2">About</h5>
-                                <p>I'm Yuki. Full Stack Designer. I enjoy creating user-centric, delightful, and human experiences.</p>
+                                <textarea class="form-control" id="bio" rows="5" placeholder="Enter your bio..."></textarea>
                             </div>
                         </div>
                     </div>
