--- a/public/html/daily_challenges.html
+++ b/public/html/daily_challenges.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <div id="head"></div>
-    <link rel="stylesheet" href="/css/daily_challenges.css">
+    <link rel="stylesheet" href="/css/daily_challenges.css" />
+  </head>
 
-</head>
+  <body>
+    <header>
+      <div id="nav_bar"></div>
+    </header>
 
-<body>
-  <header>
-    <div id="nav_bar"></div>
-  </header>
+    <main>
+      <h1>Daily Challenges</h1>
 
-  <main>
-    <h1>Daily Challenges</h1>
-
-    <div class="card">
-      <div class="card-header" onclick="toggleCollapse(this)">
-            <h5 class="mb-0 title">Challenge 1</h5>
-            <p class="mb-0 description">Short description</p>
-            <div class="finish_button">
-              <a href="#" class="btn gbtn btn-primary btn-sm ms-auto">Finish</a>
-            </div>
-
-      </div>
-
-      <div class="card-body">
-        <div class="image-clip">
-          <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+      <div class="card">
+        <div class="card-header" onclick="toggleCollapse(this)">
+          <h5 class="mb-0 title">Challenge 1</h5>
+          <p class="mb-0 description">Short description</p>
+          <div class="finish_button">
+            <a href="#" class="btn gbtn btn-primary btn-sm ms-auto">Finish</a>
+          </div>
         </div>
-        <div class="card-text">
-          <h2>Title</h2>
-          <p>Description of the challenge</p>
 
+        <div class="card-body">
+          <div class="image-clip">
+            <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+          </div>
+          <div class="card-text">
+            <h2>Title</h2>
+            <p>Description of the challenge</p>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
-   
+    </main>
 
-  <nav id="footer-nav"></nav>
-  <footer id="footer"></footer>
+    <nav id="footer-nav"></nav>
+    <footer id="footer"></footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="/scripts/app_shell.js"></script>
-  <script src="/scripts/daily_challenges.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer></script>
+    <script src="/scripts/app_shell.js"></script>
+    <script src="/scripts/daily_challenges.js"></script>
+  </body>
 </html>
