--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -47,6 +47,7 @@
                     <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
                     <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li>
                     <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
                     <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
