--- a/public/html/profile_public.html
+++ b/public/html/profile_public.html
@@ -9,6 +9,9 @@
     
     <!-- BODY -->
     <main class="container">
+        <div class="center">
+            <h1 class="mt-4">Public profile</h1>
+        </div>
         <div class="row gutters">
             <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
                 <div class="card h-100">
@@ -19,7 +22,6 @@
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
                                 </div>
                                 <h5 class="user-name">User Name</h5>
-                                <h6 class="user-email">fake@gmail.com</h6>
                             </div>
                             <div class="about">
                                 <h5 class="mb-2">About</h5>
@@ -41,12 +43,6 @@
                                 <div class="form-group">
                                     <p>Full Name</p>
                                     <span id="fullname"></span>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <p>Email</p>
-                                    <span id="email"></span>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -102,6 +98,9 @@
                 </div>
             </div>
 
+        </div>
+        <div class="center">
+            <h1 class="mt-4">Private information</h1>
         </div>
     </main>
 
