--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -113,7 +113,7 @@
 
   
             
-        <div>
+        <div class="mb-3">
             <div class="card-body">
                 <div class="row gutters">
                     <div class="col-12">
