--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -33,7 +33,7 @@
                         <div class="account-settings">
                             <div class="user-profile">
                                 <div class="user-avatar">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
+                                    <img id="profileImage" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Maxwell Admin">
                                 </div>
                                     <div class="form-group">
                                         <input type="text" disabled class="form-control publicInfoField" id="displayName" placeholder="Enter full name">
@@ -179,7 +179,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/app_shell.js"></script>
-    <script type="module" src="/scripts/settings.js"></script>
+    <script type="module" src="/scripts/profile.js"></script>
 
 </body>
 
