--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link" href="/html/daily_challenges.html">Daily Challenges</a>
+            <a class="nav-link" href="/html/dailyChallenges.html">Daily Challenges</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/html/home.html">Home</a>
