--- a/public/html/dailyChallenges.html
+++ b/public/html/dailyChallenges.html
@@ -18,7 +18,7 @@
           <h5 class="mb-0 title">Challenge 1</h5>
           <p class="mb-0 description">Short description</p>
           <div class="finish_button">
-            <a href="#" class="btn gbtn btn-primary btn-sm ms-auto">Finish</a>
+            <a href="finish_challenge.html" class="btn gbtn btn-primary btn-sm ms-auto">Finish</a>
           </div>
         </div>
 
