--- a/public/html/profile_public.html
+++ b/public/html/profile_public.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <div id="head"></div>
@@ -7,7 +7,6 @@
 <body>
     <header id="nav_bar"></header>
     
-    <!-- BODY -->
     <main class="container">
         <div class="center">
             <h1 class="mt-4">Public profile</h1>
@@ -104,10 +103,9 @@
         </div>
     </main>
 
-    <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="/scripts/app_shell.js"></script>
-</body>
+</body> -->
