--- a/public/html/finish_challenge.html
+++ b/public/html/finish_challenge.html
@@ -3,6 +3,15 @@
 <head>
     <div id="head"></div>
     <link rel="stylesheet" href="/css/finish_challenge.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
 </head>
 
 <body>
@@ -22,7 +31,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="imageInput" class="form-label">Select an Image</label>
-                        <input type="file" class="form-control" id="imageInput" name="image" accept="image/*" onchange="previewImage(event)">
+                        <input type="file" class="form-control" id="imageInput" name="image" accept="image/*" >
                     </div>
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
@@ -46,6 +55,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/app_shell.js"></script>
-    <script src="/scripts/finish_challenge.js"></script>
+    <script type="module" src="/scripts/finish_challenge.js"></script>
 
 </body>    
