--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -4,44 +4,9 @@
             <img id="logo" src="/assets/images/logo.svg" height="36">
             EcoAction
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link" href="/html/dailyChallenges.html">Daily Challenges</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/html/home.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/html/groups.html">Groups</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Resources
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Eco Tips</a></li>
-                <li><a class="dropdown-item" href="#">Community Projects</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Get Involved</a></li>
-            </ul>
-            </li> -->
-            <!-- <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
-            </li> -->
-        </ul>
-
-
-
-            <form class="d-flex" role="search">
-                <input class="form-control me-2 bg-white text-dark border-success" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light" type="submit">Search</button>
-            </form>
-
-            <!-- Profile -->
+        
+        <!-- Profile for small screens -->
+        <div class="d-lg-none ms-auto" id="profile-small">
             <div id="profile" class="dropdown ms-3">
                 <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
@@ -53,9 +18,46 @@
                     <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
-              </ul>
+                </ul>
             </div>
+        </div>
 
+        <!-- Navbar items -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/html/dailyChallenges.html">Daily Challenges</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/html/home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/html/groups.html">Groups</a>
+                </li>
+            </ul>
+
+            <form class="d-flex" role="search">
+                <input class="form-control me-2 bg-white text-dark border-success" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light" type="submit">Search</button>
+            </form>
+
+            <!-- Profile for larger screens -->
+            <div id="profile" class="d-none d-lg-block ms-3">
+                <div class="dropdown">
+                    <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle" width="40" height="40">
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
+                        <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li>
+                        <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
+                        <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
+
