--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -9,7 +9,7 @@
         <div class="d-lg-none ms-auto" id="profile-small">
             <div id="profile" class="dropdown ms-3">
                 <button class="btn btn-outline-light p-0 border-0" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/assets/images/profile-icon.png" id="navBarProfileImage" alt="Profile" class="rounded-circle" width="40" height="40">
+                    <img src="/assets/images/profile-icon.png" alt="Profile" class="rounded-circle navBarProfileImage" width="40" height="40">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
@@ -17,7 +17,7 @@
                     <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
                     <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
+                    <li><button type="button" class="dropdown-item signOut">Sign Out</button></li>
                 </ul>
             </div>
         </div>
@@ -53,7 +53,7 @@
                         <li><a class="dropdown-item" href="/html/dailyChallenges.html">Demo</a></li>
                         <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <a id="logoutButton" class="dropdown-item" href="#">Sign Out</a>
+                        <li><button id="lol" type="button" class="dropdown-item signOut">Sign Out</button></li>
                     </ul>
                 </div>
             </div>
