--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,15 +4,7 @@
   <head>
       <div id="head"></div>
       <link rel="stylesheet" href="/css/index.css">
-      <link rel="stylesheet" href="/css/app_shell/nav_bar.css">
-
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+      <link rel="stylesheet" href="/css/app_shell/navbar.css">
 
   </head>
 
