--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -53,7 +53,7 @@
                         <li><a class="dropdown-item" href="/html/dailyChallenges.html">Demo</a></li>
                         <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/html/login.html">Sign Out</a></li>
+                        <a id="logoutButton" class="dropdown-item" href="#">Sign Out</a>
                     </ul>
                 </div>
             </div>
