--- a/public/html/404.html
+++ b/public/html/404.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <div id="head"></div>
-</head>
-<body>
+  <head> </head>
+  <body>
     <header>
-        <div id="nav_bar"></div>
+      <div id="nav_bar"></div>
     </header>
 
-    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center;">
-        <h1 class="container">404 - Page Not Found</h1>
+    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center">
+      <h1 class="container">404 - Page Not Found</h1>
     </div>
 
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
-</body>
+  </body>
+</html>
