--- a/public/html/finish_challenge.html
+++ b/public/html/finish_challenge.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <div id="head"></div>
+  <head>
     <link rel="stylesheet" href="/css/finish_challenge.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header id="nav_bar"></header>
-    
+
     <!-- BODY -->
 
     <div class="container">
-        <div class="row">
-            <div class="col-12 mt-4">
-                <div class="text-center">
-                <h1>Challenge Name</h1>
-                </div>
-                <form>
-                    <div class=" text-center">
-                        <img id="imagePreview"  src="" alt="Image Preview" class="m-auto img-fluid">
-                    </div>
-                    <div class="mb-3">
-                        <label for="imageInput" class="form-label">Select an Image</label>
-                        <input type="file" class="form-control" id="imageInput" name="image" accept="image/*" >
-                    </div>
-                    <div class="mb-3">
-                        <label for="title" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="title" name="title">
-                    </div>
-                    <div class="mb-3">
-                        <label for="description" class="form-label">Description</label>
-                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-                    </div>
-                    <div class="text-center">
-                        <a type="submit" href="/html/finishAnimation.html" class="btn btn-lg gbtn  btn-secondary mb-2">Finish</a>
-                    </div>
-                </form>
+      <div class="row">
+        <div class="col-12 mt-4">
+          <div class="text-center">
+            <h1>Challenge Name</h1>
+          </div>
+          <form>
+            <div class="text-center">
+              <img id="imagePreview" src="" alt="Image Preview" class="m-auto img-fluid" />
             </div>
+            <div class="mb-3">
+              <label for="imageInput" class="form-label">Select an Image</label>
+              <input
+                type="file"
+                class="form-control"
+                id="imageInput"
+                name="image"
+                accept="image/*" />
+            </div>
+            <div class="mb-3">
+              <label for="title" class="form-label">Title</label>
+              <input type="text" class="form-control" id="title" name="title" />
+            </div>
+            <div class="mb-3">
+              <label for="description" class="form-label">Description</label>
+              <textarea
+                class="form-control"
+                id="description"
+                name="description"
+                rows="3"></textarea>
+            </div>
+            <div class="text-center">
+              <a
+                type="submit"
+                href="/html/finishAnimation.html"
+                class="btn btn-lg gbtn btn-secondary mb-2"
+                >Finish</a
+              >
+            </div>
+          </form>
         </div>
+      </div>
     </div>
 
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/scripts/app_shell.js"></script>
     <script type="module" src="/scripts/finish_challenge.js"></script>
-
-</body>    
+  </body>
+</html>
