--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <div id="head"></div>
+  <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- Templates for general use, not displayed -->
     <template id="groupCardTemplate">
-        <div class="card py-2 mx-2" style="width: 18rem">
-            <img class="card-image card-img-top" src="./assets/images/AM01.jpg" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-members">Group members</p>
-                <br>
-                <p class="card-text">
-                    Lorem ipsum or something.
-                </p>
-                <a class="btn btn-primary card-href">Read more ...</a>
-            </div>
+      <div class="card py-2 mx-2" style="width: 18rem">
+        <img class="card-image card-img-top" src="./assets/images/AM01.jpg" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-members">Group members</p>
+          <br />
+          <p class="card-text">Lorem ipsum or something.</p>
+          <a class="btn btn-primary card-href">Read more ...</a>
         </div>
+      </div>
     </template>
 
     <header id="nav_bar"></header>
-    
+
     <!-- BODY -->
 
-    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center;">
-        <h1 class="container">Groups</h1>
+    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center">
+      <h1 class="container">Groups</h1>
     </div>
 
-    <div class="container"> 
-        <!-- Here is the container for cards  -->
-        <div class="container">
-            <div id="groups-go-here" class="row row-cols-auto">
-            </div>
-        </div>
+    <div class="container">
+      <!-- Here is the container for cards  -->
+      <div class="container">
+        <div id="groups-go-here" class="row row-cols-auto"></div>
+      </div>
     </div>
 
     <a class="btn btn-primary card-href" href="group_creation.html">Create New</a>
@@ -49,9 +47,12 @@
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
 
     <script type="module" src="/scripts/groups.js"></script>
-</body>
+  </body>
+</html>
