--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head> </head>
 
-<head>
-
-    <div id="head"></div>
-
-</head>
-
-<body>
-
+  <body>
     <header>
-        <div id="nav_bar"></div>
+      <div id="nav_bar"></div>
     </header>
 
-    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center;">
-        <h1 class="container">Logged In</h1>
+    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center">
+      <h1 class="container">Logged In</h1>
     </div>
 
     <nav id="footer-nav"></nav>
@@ -22,10 +16,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/scripts/app_shell.js"></script>
-
-</body>
-
-
-
-
+  </body>
 </html>
