--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-      <div id="head"></div>
-      <link rel="stylesheet" href="/css/index.css">
-      <link rel="stylesheet" href="/css/app_shell/navbar.css">
-
+    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/app_shell/navbar.css" />
   </head>
 
   <body>
     <header>
       <!-- <div id="nav_bar"></div> -->
     </header>
-
-    
-
 
     <main class="container">
       <div class="p-5 mb-4 rounded-3">
@@ -82,15 +76,15 @@
       </div>
     </main>
 
-
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
-    
+
     <!-- JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
     <!-- Find icons at https://fontawesome.com/icons, we're using solid style -->
     <script src="https://kit.fontawesome.com/0eda3376bd.js" crossorigin="anonymous"></script>
-
   </body>
 </html>
